--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,207 +7,51 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:Arial, Helvetica, sans-serif;
-}
-
-body{
-  background:black;
-  overflow:hidden;
-}
-
-/* Background video */
-#bgVideo{
-  position:fixed;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  z-index:-1;
-}
-
-/* SCORE BAR */
-.scorebar{
-  position:absolute;
-  top:15px;
-  left:15px;
-  display:flex;
-  align-items:center;
-  border-radius:12px;
-  overflow:hidden;
-  backdrop-filter: blur(6px);
-  box-shadow:0 0 20px rgba(0,0,0,0.6);
-  transform:scale(0.5);
-  transform-origin:left top;
-  margin-right:20px;
-}
-
-.teamA{
-  display:flex;
-  align-items:center;
-  gap:8px;
-  padding:8px 12px;
-  background:rgba(0,102,255,0.9);
-  color:white;
-}
-
-.teamB{
-  display:flex;
-  align-items:center;
-  gap:8px;
-  padding:8px 12px;
-  background:rgba(255,60,60,0.9);
-  color:white;
-}
-
-.teamA img,
-.teamB img{
-  width:26px;
-  height:26px;
-  border-radius:50%;
-}
-
-.score{
-  background:black;
-  color:white;
-  padding:8px 12px;
-  font-size:20px;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-.timer{
-  background:#111;
-  color:#00ffcc;
-  padding:8px 14px;
-  font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-.live{
-  position:absolute;
-  top:15px;
-  right:15px;
-  background:red;
-  padding:6px 12px;
-  color:white;
-  font-weight:bold;
-  border-radius:6px;
-  animation:blink 1s infinite;
-}
-
-@keyframes blink{
-  0%{opacity:1}
-  50%{opacity:.4}
-  100%{opacity:1}
-}
-
-.gear{
-  position:absolute;
-  bottom:18px;
-  left:18px;
-  font-size:26px;
-  background:rgba(0,0,0,.7);
-  color:white;
-  padding:10px;
-  border-radius:50%;
-  cursor:pointer;
-}
-
-.settings{
-  position:absolute;
-  bottom:0;
-  left:0;
-  width:100%;
-  max-height:80vh;
-  background:rgba(0,0,0,.97);
-  color:white;
-  padding:18px;
-  display:none;
-  overflow-y:auto;
-}
-
-.settings::-webkit-scrollbar{
-  width:6px;
-}
-.settings::-webkit-scrollbar-thumb{
-  background:#555;
-  border-radius:4px;
-}
-
-.settings .field{
-  display:flex;
-  flex-direction:column;
-  margin-bottom:14px;
-}
-
-.settings label{
-  margin-bottom:4px;
-  font-size:13px;
-  opacity:.8;
-}
-
-.settings input{
-  padding:8px;
-  border-radius:6px;
-  border:none;
-}
-
-.closeBtn{
-  position:absolute;
-  right:15px;
-  top:12px;
-  font-size:18px;
-  cursor:pointer;
-}
-
-@media (orientation:portrait){
-  .gear{display:block;}
-}
-
-@media (orientation:landscape){
-  .gear{display:none;}
-  body{height:100vh;width:100vw;}
-}
-
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial, Helvetica, sans-serif;}
+body{background:black;overflow:hidden;}
+#bgVideo{position:fixed;width:100%;height:100%;object-fit:cover;z-index:-1;}
+.scorebar{position:absolute;top:15px;left:15px;display:flex;align-items:center;border-radius:12px;overflow:hidden;backdrop-filter: blur(6px);box-shadow:0 0 20px rgba(0,0,0,0.6);transform:scale(0.5);transform-origin:left top;margin-right:20px;}
+.teamA{display:flex;align-items:center;gap:8px;padding:8px 12px;background:rgba(0,102,255,0.9);color:white;}
+.teamB{display:flex;align-items:center;gap:8px;padding:8px 12px;background:rgba(255,60,60,0.9);color:white;}
+.teamA img,.teamB img{width:26px;height:26px;border-radius:50%;}
+.score{background:black;color:white;padding:8px 12px;font-size:20px;font-weight:bold;cursor:pointer;}
+.timer{background:#111;color:#00ffcc;padding:8px 14px;font-size:16px;font-weight:bold;cursor:pointer;}
+.live{position:absolute;top:15px;right:15px;background:red;padding:6px 12px;color:white;font-weight:bold;border-radius:6px;animation:blink 1s infinite;}
+@keyframes blink{0%{opacity:1}50%{opacity:.4}100%{opacity:1}}
+.gear{position:absolute;bottom:18px;left:18px;font-size:26px;background:rgba(0,0,0,.7);color:white;padding:10px;border-radius:50%;cursor:pointer;}
+.settings{position:absolute;bottom:0;left:0;width:100%;max-height:80vh;background:rgba(0,0,0,.97);color:white;padding:18px;display:none;overflow-y:auto;}
+.settings::-webkit-scrollbar{width:6px;}
+.settings::-webkit-scrollbar-thumb{background:#555;border-radius:4px;}
+.settings .field{display:flex;flex-direction:column;margin-bottom:14px;}
+.settings label{margin-bottom:4px;font-size:13px;opacity:.8;}
+.settings input{padding:8px;border-radius:6px;border:none;}
+.closeBtn{position:absolute;right:15px;top:12px;font-size:18px;cursor:pointer;}
+@media (orientation:portrait){.gear{display:block;}}
+@media (orientation:landscape){.gear{display:none;}body{height:100vh;width:100vw;}}
 </style>
 </head>
-
 <body>
 
-<!-- gameplay video WITH AUDIO -->
 <video id="bgVideo" autoplay loop playsinline></video>
 
 <div class="scorebar">
-
   <div class="teamA">
     <img id="logo1">
     <span id="team1">Team A</span>
   </div>
-
-  <div class="score" id="score1" onclick="addScore(1)">0</div>
-
-  <div class="timer" id="timer" onclick="timerControl()">00:00</div>
-
-  <div class="score" id="score2" onclick="addScore(2)">0</div>
-
+  <div class="score" id="score1">0</div>
+  <div class="timer" id="timer">00:00</div>
+  <div class="score" id="score2">0</div>
   <div class="teamB">
     <span id="team2">Team B</span>
     <img id="logo2">
   </div>
-
 </div>
 
 <div class="live">LIVE</div>
-
 <div class="gear" onclick="toggleSettings()">⚙️</div>
 
 <div class="settings" id="settingsPanel">
-
 <div class="closeBtn" onclick="toggleSettings()">✖</div>
 
 <h3>Broadcast Settings</h3>
@@ -246,52 +89,36 @@ body{
 </div>
 
 <script>
-
-/* SCORE */
+/* SCORE SYSTEM */
 let score1=0;
 let score2=0;
 
-function addScore(team){
-  if(team===1){
-    score1++;
-    score1El.innerText=score1;
-  }else{
-    score2++;
-    score2El.innerText=score2;
-  }
-}
+const score1El=document.getElementById("score1");
+const score2El=document.getElementById("score2");
+
+score1El.addEventListener("click",()=>{ score1++; score1El.innerText=score1; });
+score2El.addEventListener("click",()=>{ score2++; score2El.innerText=score2; });
 
 /* TIMER */
 let seconds=0;
 let timerInterval;
 let clickStage=0;
 
-function setMinutes(min){
-  seconds=min*60;
-  updateTimer();
-}
+const timer=document.getElementById("timer");
+
+function setMinutes(min){ seconds=min*60; updateTimer(); }
 
 function timerControl(){
   clickStage++;
-
   if(clickStage==1){ startTimer(); }
-  else if(clickStage==2){
-    clearInterval(timerInterval);
-    timer.innerText="HT";
-  }
+  else if(clickStage==2){ clearInterval(timerInterval); timer.innerText="HT"; }
   else if(clickStage==3){ startTimer(); }
-  else if(clickStage==4){
-    clearInterval(timerInterval);
-    timer.innerText="FT";
-  }
+  else if(clickStage==4){ clearInterval(timerInterval); timer.innerText="FT"; }
 }
 
 function startTimer(){
   clearInterval(timerInterval);
-  timerInterval=setInterval(()=>{
-    seconds++;
-    updateTimer();
-  },1000);
+  timerInterval=setInterval(()=>{ seconds++; updateTimer(); },1000);
 }
 
 function updateTimer(){
@@ -300,28 +127,19 @@ function updateTimer(){
   timer.innerText=(m<10?"0":"")+m+":"+(s<10?"0":"")+s;
 }
 
-/* VIDEO WITH AUDIO ENABLE */
+/* VIDEO WITH AUDIO */
+const bgVideo=document.getElementById("bgVideo");
 function loadVideo(e){
-  const video = bgVideo;
-  video.src = URL.createObjectURL(e.target.files[0]);
-  video.muted = false;
-  video.volume = 1;
-
-  // mobile autoplay fix
-  video.play().catch(()=>{
-    document.body.addEventListener("click",()=>{
-      video.play();
-    },{once:true});
-  });
+  bgVideo.src=URL.createObjectURL(e.target.files[0]);
+  bgVideo.muted=false;
+  bgVideo.volume=1;
+  bgVideo.play().catch(()=>{document.body.addEventListener("click",()=>{bgVideo.play();},{once:true});});
 }
 
 /* LOGOS */
 function loadLogo(e,team){
-  if(team==1){
-    logo1.src=URL.createObjectURL(e.target.files[0]);
-  }else{
-    logo2.src=URL.createObjectURL(e.target.files[0]);
-  }
+  if(team==1){ logo1.src=URL.createObjectURL(e.target.files[0]); }
+  else{ logo2.src=URL.createObjectURL(e.target.files[0]); }
 }
 
 /* TEAM NAMES */
@@ -330,17 +148,14 @@ function setName(name,team){
   else{ team2.innerText=name; }
 }
 
-/* SETTINGS */
+/* SETTINGS PANEL */
 function toggleSettings(){
-  settingsPanel.style.display =
-    settingsPanel.style.display=="block"?"none":"block";
+  settingsPanel.style.display = settingsPanel.style.display=="block"?"none":"block";
 }
-
 </script>
 
 </body>
 </html>
-
 
 
 
