--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@ body{background:black;overflow:hidden;}
 
 <div class="settings" id="settingsPanel">
 <div class="closeBtn" onclick="toggleSettings()">✖</div>
-
 <h3>Broadcast Settings</h3>
 
 <div class="field">
@@ -83,11 +82,10 @@ body{background:black;overflow:hidden;}
 <label>Set Timer (minutes)</label>
 <input type="number" onchange="setMinutes(this.value)">
 </div>
-
 </div>
 
 <script>
-/* SCORE SYSTEM */
+/* SCORES */
 let score1=0;
 let score2=0;
 const score1El=document.getElementById("score1");
@@ -95,10 +93,10 @@ const score2El=document.getElementById("score2");
 score1El.addEventListener("click",()=>{score1++;score1El.innerText=score1;});
 score2El.addEventListener("click",()=>{score2++;score2El.innerText=score2;});
 
-/* TIMER SYSTEM */
+/* TIMER */
 let seconds=0;
-let timerInterval;
-let clickStage=0; // 1=start,2=HT,3=resume,4=FT
+let timerInterval=null;
+let clickStage=0;
 let savedSeconds=0;
 const timer=document.getElementById("timer");
 
@@ -109,17 +107,16 @@ function setMinutes(min){
 
 function timerControl(){
   clickStage++;
-  if(clickStage==1){ startTimer(); }
-  else if(clickStage==2){ // HT
+  if(clickStage==1){ // start
+    startTimer();
+  } else if(clickStage==2){ // HT
     clearInterval(timerInterval);
     savedSeconds=seconds;
     timer.innerText="HT";
-  }
-  else if(clickStage==3){ // resume from HT
+  } else if(clickStage==3){ // resume from HT
     seconds=savedSeconds;
     startTimer();
-  }
-  else if(clickStage==4){ // FT
+  } else if(clickStage==4){ // FT
     clearInterval(timerInterval);
     timer.innerText="FT";
   }
@@ -145,7 +142,9 @@ function loadVideo(e){
   bgVideo.src=URL.createObjectURL(e.target.files[0]);
   bgVideo.muted=false;
   bgVideo.volume=1;
-  bgVideo.play().catch(()=>{document.body.addEventListener("click",()=>{bgVideo.play();},{once:true});});
+  bgVideo.play().catch(()=>{
+    document.body.addEventListener("click",()=>{bgVideo.play();},{once:true});
+  });
 }
 
 /* LOGOS */
@@ -166,8 +165,14 @@ function toggleSettings(){
 }
 </script>
 
+<!-- timer click -->
+<script>
+timer.addEventListener("click",timerControl);
+</script>
+
 </body>
 </html>
+
 
 
 
